--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="add_widget">Add widget</string>
     <string name="fab_button_description">add a new stock to your list</string>
     <string name="stockhawk_widget_bar_string">Stockhawk</string>
+    <string name="no_server_info">No server Info</string>
 
 </resources>
